# agent-view

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install-mitre.sh  install.sh  package.json  tsconfig.json  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: mirror.yml  rust-release.yml  rust-test.yml  rust-version-bump.yml
docs/superpowers/plans/: 2026-04-01-follow-up-mark.md  2026-04-08-rust-rewrite-phase1.md  2026-04-09-rust-rewrite-phase2.md  2026-04-10-github-gitlab-mirror.md  2026-04-10-status-polling-fix.md  2026-04-10-status-processing-refactor.md  2026-04-13-remaining-features.md  2026-04-14-rust-ci-quality.md
docs/superpowers/specs/: 2026-04-01-follow-up-mark-design.md  2026-04-08-rust-rewrite-design.md  2026-04-10-github-gitlab-mirror-design.md  (+3 more)
scripts/: build.ts
src/: app.rs  event.rs  index.ts  main.rs  poller.rs  types.rs
src/core/: attach_state.rs  config.rs  config.ts  git.rs  groups.rs  logger.rs  mod.rs  notify.rs  notify.test.ts  notify.ts  path_complete.rs  routine.rs  schedule.rs  scheduler.rs  scheduler_linux.rs  scheduler_macos.rs  session.rs  session.ts  status.rs  storage.rs  storage.test.ts  storage.ts  tmux.rs  tmux.test.ts  tmux.ts  tokens.rs  types.ts  usage.rs  version.ts
src/input/: export.rs  mod.rs  overlay.rs  routine.rs  session.rs
src/tui/: app.tsx
src/ui/: detail.rs  footer.rs  home.rs  mod.rs  overlay.rs  routines.rs  theme.rs
(+12 files in other folders)
