[package]
name = "agent-view"
version = "1.2.0"
edition = "2021"
description = "Terminal UI for managing AI coding agent sessions"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
lazy_static = "1"
libc = "0.2"
notify = "7"
ansi-to-tui = "8"
ratatui-core = "0.1"
croner = "2"

[dev-dependencies]
tempfile = "3"
